[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/charOne.PNG" type="Texture" id=1]
[ext_resource path="res://textures/Menu/pTwoSelect.PNG" type="Texture" id=2]
[ext_resource path="res://textures/Menu/pOneSelect.PNG" type="Texture" id=3]
[ext_resource path="res://textures/charTwo.png" type="Texture" id=4]
[ext_resource path="res://textures/Menu/startPress.PNG" type="Texture" id=5]
[ext_resource path="res://textures/Menu/start.PNG" type="Texture" id=6]
[ext_resource path="res://textures/Menu/startHover.PNG" type="Texture" id=7]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=8]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.01468
margin_right = 1025.99
margin_bottom = 603.0
color = Color( 0.105882, 0.25098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 365.0
margin_top = 421.0
margin_right = 720.0
margin_bottom = 486.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelect" type="GridContainer" parent="."]
margin_left = 368.477
margin_top = 217.352
margin_right = 635.477
margin_bottom = 396.352
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pOne" type="TextureButton" parent="PlayerSelect"]
margin_right = 127.0
margin_bottom = 129.0
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pTwo" type="TextureButton" parent="PlayerSelect"]
margin_left = 131.0
margin_right = 267.0
margin_bottom = 129.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="toggled" from="PlayerSelect/pOne" to="." method="_on_pOne_toggled"]
[connection signal="toggled" from="PlayerSelect/pTwo" to="." method="_on_pTwo_toggled"]
